# rublas410

./: .gitmodules
rublas/: Cargo.toml  README.md
rublas/benches/: ablation.rs  add.rs  basic.rs  build_tensor.rs  div.rs  gemm.rs  gemv.rs  mul.rs  rng.rs  sub.rs  tensor_create_ablation.rs
rublas/misc/gemm_test/gemv_64_64c_1/64/base/: benchmark.json  estimates.json  raw.csv  sample.json
rublas/misc/gemm_test/gemv_64_64c_1/64/change/: estimates.json
rublas/misc/gemm_test/gemv_64_64c_1/64/new/: tukey.json
rublas/misc/gemm_test/gemv_64_64c_1/64/report/: index.html
rublas/misc/gemv/0/report/: index.html
rublas/misc/gemv/1024_1024_f32/1024/base/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
rublas/misc/gemv/1024_1024_f32/1024/report/: index.html
rublas/misc/gemv/128_128_f32/128/base/: benchmark.json  estimates.json
rublas/misc/gemv/128_128_f32/128/new/: raw.csv  sample.json  tukey.json
rublas/misc/gemv/128_128_f32/128/report/: index.html
rublas/misc/gemv/2048_2048_f32/2048/base/: estimates.json
rublas/misc/gemv/2048_2048_f32/2048/new/: benchmark.json  raw.csv  sample.json  tukey.json
rublas/misc/gemv/2048_2048_f32/2048/report/: index.html
rublas/misc/gemv/32_32_f32/32/base/: benchmark.json  sample.json
rublas/misc/gemv/32_32_f32/32/new/: estimates.json  raw.csv  tukey.json
rublas/misc/gemv/32_32_f32/32/report/: index.html
rublas/misc/gemv/4096_4096_f32/4096/base/: estimates.json  raw.csv
rublas/misc/gemv/4096_4096_f32/4096/new/: benchmark.json  sample.json  tukey.json
rublas/misc/gemv/4096_4096_f32/4096/report/: index.html
rublas/misc/gemv/512_512_f32/512/base/: raw.csv
rublas/misc/gemv/512_512_f32/512/new/: benchmark.json  estimates.json  sample.json  tukey.json
rublas/misc/gemv/512_512_f32/512/report/: index.html
rublas/misc/gemv/64_64_f32/64/base/: sample.json  tukey.json
rublas/misc/gemv/64_64_f32/64/new/: benchmark.json  estimates.json  raw.csv
rublas/misc/gemv/64_64_f32/64/report/: index.html
rublas/misc/gemv/8192_8192_f32/8192/base/: raw.csv  sample.json  tukey.json
rublas/misc/gemv/8192_8192_f32/8192/new/: benchmark.json  estimates.json
rublas/misc/gemv/8192_8192_f32/8192/report/: index.html
rublas/misc/gemv/M1024_K1024_f32/0/base/: benchmark.json  sample.json  tukey.json
rublas/misc/gemv/M1024_K1024_f32/0/change/: estimates.json
rublas/misc/gemv/M1024_K1024_f32/0/new/: estimates.json  raw.csv
rublas/misc/gemv/M1024_K1024_f32/0/report/: index.html
rublas/misc/gemv/M1024_K1024_f64/0/base/: raw.csv  sample.json  tukey.json
rublas/misc/gemv/M1024_K1024_f64/0/new/: benchmark.json  estimates.json
rublas/misc/gemv/M1024_K1024_f64/0/report/: index.html
rublas/misc/gemv/M1024_K128_f32/0/base/: raw.csv  sample.json  tukey.json
rublas/misc/gemv/M1024_K128_f32/0/new/: benchmark.json  estimates.json
rublas/misc/gemv/M1024_K128_f32/0/report/: index.html
rublas/misc/gemv/M1024_K128_f64/0/base/: benchmark.json  tukey.json
rublas/misc/gemv/M1024_K128_f64/0/new/: estimates.json  raw.csv  sample.json
rublas/misc/gemv/M1024_K128_f64/0/report/: index.html
rublas/misc/gemv/M1024_K16_f32/0/base/: estimates.json  raw.csv  tukey.json
rublas/misc/gemv/M1024_K16_f32/0/new/: benchmark.json  sample.json
rublas/misc/gemv/M1024_K16_f32/0/report/: index.html
rublas/misc/gemv/M1024_K16_f64/0/base/: raw.csv  sample.json  tukey.json
rublas/misc/gemv/M1024_K16_f64/0/new/: benchmark.json  estimates.json
rublas/misc/gemv/M1024_K16_f64/0/report/: index.html
rublas/misc/gemv/M1024_K256_f32/0/base/: estimates.json  sample.json
rublas/misc/gemv/M1024_K256_f32/0/new/: benchmark.json  raw.csv  tukey.json
rublas/misc/gemv/M1024_K256_f32/0/report/: index.html
rublas/misc/gemv/M1024_K256_f64/0/base/: benchmark.json  estimates.json  sample.json  tukey.json
rublas/misc/gemv/M1024_K256_f64/0/new/: raw.csv
rublas/misc/gemv/M1024_K256_f64/0/report/: index.html
rublas/misc/gemv/M1024_K32_f32/0/base/: estimates.json  sample.json  tukey.json
rublas/misc/gemv/M1024_K32_f32/0/new/: benchmark.json  raw.csv
rublas/misc/gemv/M1024_K32_f32/0/report/: index.html
rublas/misc/gemv/M1024_K32_f64/0/base/: estimates.json  tukey.json
rublas/misc/gemv/M1024_K32_f64/0/new/: benchmark.json  raw.csv  sample.json
rublas/misc/gemv/M1024_K32_f64/0/report/: index.html
rublas/misc/gemv/report/: index.html
rublas/misc/report/: index.html
rublas/misc/rng_uniform/1024/report/: index.html
rublas/misc/rng_uniform/128/report/: index.html
rublas/misc/rng_uniform/16/report/: index.html
rublas/misc/rng_uniform/2048/report/: index.html
rublas/misc/rng_uniform/256/report/: index.html
rublas/misc/rng_uniform/32/report/: index.html
rublas/misc/rng_uniform/4096/report/: index.html
rublas/misc/rng_uniform/512/report/: index.html
rublas/misc/rng_uniform/64/report/: index.html
rublas/misc/rng_uniform/8192/report/: index.html
rublas/misc/rng_uniform/report/: index.html
rublas/misc/small_gemv/report/: index.html
rublas/src/: blas_executor.rs  blas_opcode.rs  blas_tensor.rs  lib.rs  ndarray_adapter.rs  tensor.rs
(+927 files in other folders)
