[package]
name = "rublas"
version = "0.1.0"
edition = "2021"
# resolver = "2"
authors = [
  "Albert Shi",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "wrapper project for integrating ndarray + blas libs into Chopper CRT."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# the version pick for ndarray/blas-src/openblas-src/ndarray-linalg is tricky
# since blas-src constraints the version of ndarray and backend vendors
# currently pick a workable one but may bump up to later version if available

[dependencies]

# basic deps
num-traits = "0.2"

# backend deps
ndarray-vanilla = { package = "ndarray", version = "0.15", optional = true }
ndarray-blas = { package = "ndarray", version = "0.14", path = "../ndarray", optional = true, features = ["blas"] }
ndarray-linalg = { package = "ndarray-linalg", version = "0.13", optional = true, path = "../ndarray-linalg/ndarray-linalg", features = ["netlib-system"] }
ndarray-rand = { package = "ndarray-rand", version = "0.11", path = "../ndarray/ndarray-rand" }

# use netlib
blas-src-netlib = { package = "blas-src", version = "0.6.1", default-features = false, optional = true, features = ["netlib"] }

# use openblas
blas-src-openblas = { package = "blas-src", version = "0.6.1", optional = true, features = ["openblas"] }
openblas-src = { version = "0.9.0", optional = true, features = ["cblas", "system"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[features]
default = ["ndarray-vanilla"]
openblas = ["ndarray-blas", "blas-src-openblas", "openblas-src"]
netlib = ["ndarray-blas", "blas-src-netlib"]

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "gemv"
harness = false

[[bench]]
name = "gemm"
harness = false

[[bench]]
name = "rng"
harness = false

[[bench]]
name = "build_tensor"
harness = false

[[bench]]
name = "add"
harness = false

[[bench]]
name = "sub"
harness = false
