[package]
name = "rublas"
version = "0.1.0"
edition = "2021"
# resolver = "2"
authors = [
  "Albert Shi",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "wrapper project for integrating ndarray + blas libs into Chopper CRT."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# the version pick for ndarray/blas-src/openblas-src/ndarray-linalg is tricky
# since blas-src constraints the version of ndarray and backend vendors
# currently pick a workable one but may bump up to later version if available

[dependencies]

# basic deps
num-traits = "0.2"
ndarray-rand = { package = "ndarray-rand", version = "0.13"}

[dependencies.ndarray]
version = "0.14"
features = ["blas", "approx"]
default-features = false

[dependencies.ndarray-linalg]
version = "0.13.1"
features = ["openblas"]
default-features = false

# rand = "0.7.3"
# ndarray-rand = { package = "ndarray-rand", version = "0.11", path = "../ndarray/ndarray-rand" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "basic"
harness = false

[[bench]]
name = "gemv"
harness = false

[[bench]]
name = "gemm"
harness = false

[[bench]]
name = "rng"
harness = false

[[bench]]
name = "build_tensor"
harness = false

[[bench]]
name = "add"
harness = false

[[bench]]
name = "sub"
harness = false

[[bench]]
name = "mul"
harness = false

[[bench]]
name = "div"
harness = false